--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-BOT_TOKEN=1085772445:AAEUdMIocKWwdK40vEAd-s1-c21A3LZGlG8
+BOT_TOKEN = '1165106763:AAEdLLdIS_6BcYAt1vmmZBG8ol1Rah9Z7hk'
+ETHEREUM_ACCOUNT = 0xae804E83595BB4D5713B6FB656b31794c510F677
+CONTRACT_ADDRESS = 0xa08462e67646129773dd0fa04fde6fda3afdbea2
+GAS_LIMIT = 250000
+PROVIDER = 'http://localhost:3001'
