--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./api/main.js",
   "scripts": {
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run tsc ./api/main.ts && node ./api/main.js"
   },
   "repository": {
     "type": "git",
