--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,12 @@
 
 # Package
 **/node_modules
+./package-lock.json
 
 # Compiled-js
 ./api/command.js
 ./api/contract.js
 ./api/main.js
+
+# .env
+./.env
