--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "qrcode": "^1.4.4",
     "source-map-loader": "^0.2.4",
     "telegraf": "^3.38.0",
+    "truffle-hdwallet-provider": "^1.0.17",
     "typescript": "^3.8.3",
     "web3": "^1.2.7"
   }
