--- a/gitleaks.toml
+++ b/gitleaks.toml
@@ -1,3 +1,3 @@
 [whitelist]
 	description = "Whitelisted files"
-	file = '''(^\.?gitleaks.toml$|(.*?)(jpg|gif|doc|pdf|bin)$|.*package-lock.json$)'''
+	file = '''(^\.?gitleaks.toml$|(.*?)(jpg|gif|doc|pdf|bin|package-lock\.json)$)'''
