--- a/packages/smart-contract/tsconfig.json
+++ b/packages/smart-contract/tsconfig.json
@@ -1,9 +1,6 @@
 {
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
     "outDir": "dist",
     "resolveJsonModule": true
   },
