--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -8,10 +8,11 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "jest --detectOpenHandles --colors"
+    "test": "jest --detectOpenHandles --colors",
+    "precommit": "lint-staged"
   },
   "engines": {
-    "node": "8"
+    "node": "12"
   },
   "jest": {
     "roots": [
@@ -26,12 +27,13 @@
   "dependencies": {
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
-    "telegraf": "^3.38.0"
+    "telegraf": "^3.38.0",
+    "firebase-functions-test": "^0.2.1"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
-    "firebase-functions-test": "^0.2.1",
     "jest": "^25.5.4",
+    "lint-staged": "^10.2.2",
     "ts-jest": "^25.4.0",
     "tslint": "^5.12.0",
     "typescript": "^3.8.0"
