--- a/packages/smart-contract/package.json
+++ b/packages/smart-contract/package.json
@@ -7,7 +7,8 @@
     "build": "npm run compile && npx buidler typechain",
     "compile": "npx buidler compile",
     "test": "npx buidler test",
-    "coverage": "npm run build && npx buidler coverage --temp artifacts --network coverage"
+    "coverage": "npm run build && npx buidler coverage --temp artifacts --network coverage",
+    "precommit": "lint-staged"
   },
   "repository": "https://github.com/FrenchyPeanut/TeleCryptoPay.git",
   "author": "Charles BEYER <charles.beyer.pro@gmail.com> | BlockHub Team",
@@ -25,10 +26,8 @@
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^2.4.1",
     "ethers": "^4.0.47",
-    "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
-    "prettier": "^2.0.5",
-    "pretty-quick": "^2.0.1",
+    "ptokens-pbtc": "^0.4.2",
     "solidity-coverage": "^0.7.5",
     "ts-generator": "0.0.8",
     "ts-node": "^8.9.1",
@@ -37,13 +36,7 @@
     "typechain-target-ethers": "^1.0.4",
     "typechain-target-truffle": "^1.0.2",
     "typechain-target-web3-v1": "^1.0.4",
-    "typescript": "^3.8.3",
-    "ptokens-pbtc": "^0.4.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "typescript": "^3.8.3"
   },
   "lint-staged": {
     "**/*.ts": [
