--- a/packages/smart-contract/package.json
+++ b/packages/smart-contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "telegramdefi",
+  "name": "smart-contract",
   "version": "1.0.0",
   "description": "Smart-Contract PoC for smart-wallet",
   "main": "index.js",
