--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,24 @@
 {
   "functions": {
     "source": "packages/bot",
-    "predeploy": ["npm run lint", "npm run build"]
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ]
+  },
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "hosting": {
+      "port": 5000
+    }
+  },
+  "hosting": {
+    "public": "packages/web/build",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
