--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "outDir": "lib"
+    "outDir": "lib",
+    "skipLibCheck": true
   },
   "compileOnSave": true,
   "include": ["src/**/*.ts"],
