--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,7 @@
 {
   "functions": {
     "source": "packages/bot",
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
-    ]
+    "predeploy": ["npm --prefix packages/bot run lint", "npm --prefix packages/bot run build"]
   },
   "emulators": {
     "functions": {
