--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "outDir": "lib",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noImplicitAny": false,
+    "resolveJsonModule": true
   },
   "compileOnSave": true,
   "include": ["src/**/*.ts"],
