--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -26,16 +26,19 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^8.10.0",
+    "@types/uuid": "^7.0.3",
+    "ethers": "^4.0.47",
+    "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.6.1",
+    "firebase-functions-test": "^0.2.1",
     "telegraf": "^3.38.0",
-    "firebase-functions-test": "^0.2.1"
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "jest": "^25.5.4",
     "lint-staged": "^10.2.2",
-    "ts-jest": "^25.4.0",
+    "ts-jest": "^25.5.1",
     "tslint": "^5.12.0",
     "typescript": "^3.8.0"
   },
