feat(config): auto override firebase config

--- a/.env.dist
+++ b/.env.dist
@@ -2,8 +2,16 @@
 # only for local usage
 # please no space between key and value
 
+# common
+INFURA_APIKEY=
+
+# bot
 BOT_TOKEN=
-INFURA_API_KEY=
+CONTRACT_ADDRESS=
+OWNER_PK=
+NETWORK_NAME=
+
+# smart-contract
 RINKEBY_PRIVATE_KEY=
 ROPSTEN_PRIVATE_KEY=
 ETHERSCAN_API_KEY=
