feat(bot): add bot balance and swap pBTC

--- a/.env.dist
+++ b/.env.dist
@@ -3,13 +3,14 @@
 # please no space between key and value
 
 # common
-INFURA_APIKEY=
+INFURA_API_KEY=
 
 # bot
 BOT_TOKEN=
 CONTRACT_ADDRESS=
 OWNER_PK=
-NETWORK_NAME=
+NETWORK_BTC=testnet
+NETWORK_ETH=ropsten
 
 # smart-contract
 RINKEBY_PRIVATE_KEY=
