--- a/firebase.json
+++ b/firebase.json
@@ -17,5 +17,8 @@
   "hosting": {
     "public": "packages/web/build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+  },
+  "firestore": {
+    "rules": "firestore.rules"
   }
 }
