--- a/packages/smart-contract/package.json
+++ b/packages/smart-contract/package.json
@@ -19,6 +19,8 @@
     "@nomiclabs/buidler-ethers": "^1.3.1",
     "@nomiclabs/buidler-etherscan": "^1.3.1",
     "@nomiclabs/buidler-waffle": "^1.3.1",
+    "@openzeppelin/contracts": "^3.0.1",
+    "@openzeppelin/test-helpers": "^0.5.5",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.4",
@@ -37,8 +39,7 @@
     "typechain-target-ethers": "^1.0.4",
     "typechain-target-truffle": "^1.0.2",
     "typechain-target-web3-v1": "^1.0.4",
-    "typescript": "^3.8.3",
-    "@openzeppelin/contracts": "^3.0.1"
+    "typescript": "^3.8.3"
   },
   "lint-staged": {
     "**/*.ts": [
