feat(bot): receive with qr code and handle wallet events

--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -27,11 +27,13 @@
   "main": "lib/index.js",
   "dependencies": {
     "@types/uuid": "^7.0.3",
+    "date-fns": "^2.14.0",
     "ethers": "^4.0.47",
     "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.6.1",
     "firebase-functions-test": "^0.2.1",
     "ptokens-pbtc": "^0.4.2",
+    "qrcode": "^1.4.4",
     "telegraf": "^3.38.0",
     "uuid": "^8.0.0"
   },
