--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -32,6 +32,7 @@
     "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.6.1",
     "firebase-functions-test": "^0.2.1",
+    "otplib": "^12.0.1",
     "ptokens-pbtc": "^0.4.2",
     "qrcode": "^1.4.4",
     "telegraf": "^3.38.0",
