--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -26,6 +26,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/qrcode": "^1.3.4",
     "@types/uuid": "^7.0.3",
     "date-fns": "^2.14.0",
     "ethers": "^4.0.47",
