feat(dai): add dai balance + edit some messages

--- a/.env.dist
+++ b/.env.dist
@@ -8,7 +8,8 @@ SERVICE_NAME=
 
 # bot
 BOT_TOKEN=
-CONTRACT_ADDRESS=
+CONTRACT_ADDRESS_MANAGER=
+CONTRACT_ADDRESS_DAI=0xf80A32A835F79D7787E8a8ee5721D0fEaFd78108
 OWNER_PK=
 NETWORK_BTC=testnet
 NETWORK_ETH=ropsten
